# fqhex

./: CMakeLists.txt  README.md
include/: fqhex.hpp  fqhex16_avx2.hpp  fqhex16_ssse3.hpp  fqhex32_avx2.hpp  fqhex32_ssse3.hpp  fqhex8_avx2.hpp  fqhex8_ssse3.hpp  fqhex_avx2.hpp  fqhex_generic.hpp  fqhex_ssse3.hpp
perf/: CMakeLists.txt  fqhex_perf_test.cpp  fqhex_perf_test.hpp  ops_measure.hpp
test/: CMakeLists.txt  fqhex_test.cpp
